# SlicerJupyter

./: CMakeLists.txt  CTestConfig.cmake  LICENSE  README.md  SlicerJupyterLogo.xcf  SuperBuild.cmake
CMake/: FindZeroMQ.cmake
JupyterKernel/: CMakeLists.txt  qSlicerJupyterKernelModule.cxx  qSlicerJupyterKernelModule.h  qSlicerJupyterKernelModuleWidget.cxx  qSlicerJupyterKernelModuleWidget.h  xSlicerInterpreter.cxx  xSlicerInterpreter.h  xSlicerServer.cxx  xSlicerServer.h
JupyterKernel/Logic/: vtkSlicerJupyterKernelLogic.cxx  vtkSlicerJupyterKernelLogic.h
JupyterKernel/Resources/: kernel-configure.py  kernel-install.json.in  kernel-template.json.in  kernel.json.in  qSlicerJupyterKernelModule.qrc
JupyterKernel/Resources/UI/: qSlicerJupyterKernelControlWidget.ui  qSlicerJupyterKernelFooBarWidget.ui  qSlicerJupyterKernelModuleWidget.ui
JupyterKernel/Widgets/: CMakeLists.txt  qSlicerJupyterKernelControlWidget.cxx  qSlicerJupyterKernelControlWidget.h  qSlicerJupyterKernelFooBarWidget.cxx  qSlicerJupyterKernelFooBarWidget.h  xSlicerInterpreter.cxx  xSlicerInterpreter.h  xSlicerKernel.cxx  xSlicerKernel.h  xSlicerServer.cxx  xSlicerServer.h
JupyterNotebooks/: CMakeLists.txt  JupyterNotebooks.py
JupyterNotebooks/JupyterNotebooksLib/: __init__.py  cli.py  display.py  files.py  interactive_view_widget.py  widgets.py
SuperBuild/: External_ZeroMQ.cmake  External_cppzmq.cmake  External_cryptopp.cmake  External_nlohmann_json.cmake  External_pybind11.cmake  External_pybind11_json.cmake  External_python-jedi.cmake  External_python-packages.cmake  External_python-pygments.cmake  External_xeus-python.cmake  External_xeus-zmq.cmake  External_xeus.cmake  External_xtl.cmake
SuperBuild/cryptopp-patch/: CMakeLists.txt  cryptopp-config.cmake
